# krieg

./: README.md
client/: .gitignore  README.md  project.godot
client/board/: BoardView.gd  BoardView.gd.uid  FeatureStyles.gd  FeatureStyles.gd.uid  TerrainRenderer.gd  TerrainRenderer.gd.uid
client/board3d/: FeatureVolumes3D.gd  FeatureVolumes3D.gd.uid  Heightfield.gd  Heightfield.gd.uid  TerrainMesh3D.gd  TerrainMesh3D.gd.uid  View3D.gd  View3D.gd.uid
client/game/: GameState.gd  GameState.gd.uid
client/main/: Main.gd  Main.gd.uid  Main.tscn
client/pieces/: Piece.gd  Piece.gd.uid  PieceLayer.gd  PieceLayer.gd.uid  UnitCatalogue.gd  UnitCatalogue.gd.uid
client/pieces3d/: Piece3D.gd  Piece3D.gd.uid  Piece3DLayer.gd  Piece3DLayer.gd.uid
client/rules/: ElevationField.gd  ElevationField.gd.uid  RulesEngine.gd  RulesEngine.gd.uid  RulesOverlay.gd  RulesOverlay.gd.uid  Ruleset.gd  Ruleset.gd.uid  Strategos.gd  Strategos.gd.uid  TerrainModel.gd  TerrainModel.gd.uid
docs/: PLAN.md
pipeline/: .gitignore  README.md  pyproject.toml
pipeline/scenarios/: fundao.yaml  teresopolis.yaml  waterloo.yaml
pipeline/src/krieg_pipeline/: __init__.py  cli.py  config.py  pipeline.py  preview.py  ruleset.py
pipeline/src/krieg_pipeline/mapeditor/: __init__.py  server.py
pipeline/src/krieg_pipeline/mapeditor/static/: editor.html
pipeline/src/krieg_pipeline/rules/: default.yaml
pipeline/src/krieg_pipeline/stages/: __init__.py  acquire.py  classify.py  clip.py  coastline.py  contour.py  emit.py  filter.py  reproject.py
pipeline/tests/: test_mapeditor.py  test_pipeline.py
(+31 files in other folders)
